# ACA_proj

./: .README.md.swp  .gitignore  README.md
C/: Makefile  main.c
C/archive/: backward_climate.m  estim_model.m  forward_climate.m  fundamentals.m  histwc.m  initialize.m  main.m  migration_costs.m  model_initial_period.m  natal_fct.m  plots_adap_agg.m  plots_append_agg.m  plots_backward.m  plots_central.m  plots_dam_agg.m  plots_source_agg.m  plots_taxsub_agg.m  temp_downscaling.do
C/common/: app.cpp  app.h  definitions.h  definitions_parkinglot  dev_options.h  init.cpp
C/cpu/: swcpp_parkinglot  swh_parkinglot
RA/220603-rcond/: main.cpp
RA/220607-mdiv/: call_mdiv.m  main.cpp  mdiv.m
RA/220616/: Re-.eml  estim_model.m  initialize.m  main.cpp  main_testbench.m  print_bin_2D_to_C.m  read_bin_2D_from_C.m  snippet_tester.m
RA/220628/: Re- Re-.eml  main.cpp  natal_fct.m  snippet_tester.m
fpga/: Makefile  README.md  design.cfg  hls_config.tcl  xrt.ini
fpga/archive/: app2.cpp  definitions.h  dev_options.h  hw.h  init.cpp  init.h  sw.h
fpga/fpga/: hw.cpp  (+2 more)
matlab-final/: backward_climate.m  forward_climate.m  main.cpp  migration_costs.m  natal_fct.m
spurFPGA/CCE-C/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gmon.out
spurFPGA/CCE-C/.cache/clangd/index/: initializations.h.B658E781B2990740.idx  loop_uhat_sparse.h.56EED3A6EF7DC1FE.idx  projectTypes.h.A239889200BBA2BF.idx  rt_nonfinite.h.3C4311B2AA3B1866.idx  rtwtypes.h.2AF109635A911B3A.idx  svd.h.8A8A081D1AC47F13.idx  tmwtypes.h.EFAB1AA59A79B10C.idx
spurFPGA/CCE-C/apps/: CMakeLists.txt  Makefile  gmon.out  main  main.cpp  mainAVX.cpp  mainMATLAB.cpp  mainforwardedit.cpp  mainsparse.cpp  mainunaltered.cpp
spurFPGA/CCE-C/apps/tests/: nonvectortest  nonvectortest.cpp  vectortestWindows.cpp  vectortestdouble  vectortestdouble.cpp  vectortestfloat  vectortestfloat.cpp
spurFPGA/VivadoProjectZync/VivadoProjectZync.ip_user_files/sim_scripts/design_1/modelsim/: CMakeLists.txt  compile.do  design_1.sh  ps7_init.tcl  simulate.do
stata/: damage_function.do  temp_downscaling.do
study-trmult/: main_testbench.m  study_trmult_reduced.m
testbench/: README.txt  check_1_initialize.m
util/: compare_results.py  power.sh
valgrind/: M0-valgrind.sh  M00-Var.sh
(+2837 files in other folders)
